# embrave

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  INSTALL.md  RA_build.sh  RA_run.sh  README.md  TODO  TPA_build.sh  TPA_run.sh  agent_build.sh  ascii_runtime_measurements  binary_runtime_measurements  build.sh  create_hash_dir.sh  create_keys.sh  docker-compose.yaml  embrave.conf.example  exclude_list  join_service.sh  lemon.conf  lemon.conf.track  mosquitto.conf  pcrext.py  run_test.sh  tool_as_lib.patch  verifier.sh  verifier_build.sh  verifier_run.sh
.github/workflows/: build.yml  cmake-single-platform.yml
Agents/Remote_Attestor/: RA.c  RA.h
Agents/Remote_Attestor/DB/: ak_bind.txt
Agents/TPA/: TPA.c  TPA.h
Protocols/: common.c  common.h  tpm2_quote.c
Protocols/Explicit/: Explicit.c  Explicit.h  whitelist.db
Protocols/tpm_tools/: tpm2_quote.c  tpm2_quote.h  tpm2_utils.c  tpm2_utils.h
Protocols/tpm_tools/OLD/: tpm2_utils.h
Protocols/tpm_tools/lib/: efi_event.h  files.c  files.h  log.c  log.h  object.c  object.h  pcr.c  pcr.h  tool_rc.c  tool_rc.h  tpm2.c  tpm2.h  tpm2_alg_util.c  tpm2_alg_util.h  tpm2_attr_util.c  tpm2_attr_util.h  tpm2_auth_util.c  tpm2_auth_util.h  tpm2_capability.c  tpm2_capability.h  tpm2_cc_util.c  tpm2_cc_util.h  tpm2_convert.c  tpm2_convert.h  tpm2_ctx_mgmt.c  tpm2_ctx_mgmt.h  tpm2_errata.c  tpm2_errata.h  tpm2_eventlog.c  tpm2_eventlog.h  tpm2_eventlog_yaml.c  tpm2_eventlog_yaml.h  tpm2_hash.c  tpm2_hash.h  tpm2_header.h  tpm2_hierarchy.c  tpm2_hierarchy.h  tpm2_identity_util.c  tpm2_identity_util.h  (+20 more)
Server/Attester/: Makefile  server.c  server_Mongoose.c
Server/Verifier/: Makefile  client.c
Whitelist_generator/: create_db.py  create_whitelist.py  exclude_list  whitelist_db_generator.py  whitelist_generator_test.py
docs/: README.md  requirements.txt
docs/api/: apis.yaml
docs/protocols/: join.puml  remote_attestation.puml  revocation.puml  verifier_join.puml
docs/source/: apis.rst  conf.py  config-file.rst  documentation.rst  index.rst  overview.rst  protocols.rst  quick_start.rst
include/: RA.h  attester_agent.h  ca.h  common.h  config_parse.h  ek_cert.h  join_service.h  mqtt_client.h  tpm.h  tpm_activatecredential.h  tpm_ak.h  tpm_ek.h  tpm_flushcontext.h  tpm_makecredential.h  tpm_policysecret.h  tpm_quote.h  tpm_startauthsession.h  verifier.h  x509.h
lib/mongoose/: commit_id.txt
lib/sqlite3/: setup-sqlite-source.sh  sqlite3.h
patches/tpm2-tools/: config.h  remove_print.patch
script/: add_whitelist.py  create_certificates.sh  create_tpm_keys.sh  exclude.txt  goldenvalue_db_generator.py  ra_db.py  set_up.sh  setup_ra.sh  setup_tpa.sh  setup_verifier.sh  whitelist.txt
scripts/: add_excludelist.py  add_goldenvalue.py  add_goldenvalue_from_file.py  agent_run.sh  create_hash_dir.sh  exclude.txt  goldenvalue_db_generator.py  kpi_sealed_object.sh  process_simulation.sh  setup_attester.sh  setup_verifier.sh  verifier_db.py
src/: common.c  config_parse.c  mqtt_client.c  tpm.c  tpm_quote.c
src/attester/: Makefile  attester_agent.c  attester_server.c  attester_server.c.backup  attester_server_http.c  ek_cert.c  tpm_activatecredential.c  tpm_ak.c  tpm_ek.c  tpm_flushcontext.c  tpm_policysecret.c  tpm_startauthsession.c
src/ca/: ca.c  tpm_makecredential.c
src/join_service/: join_service.c  tpm_makecredential.c  x509.c
src/verifier/: Makefile  RA.c  mqtt_client.c  verifier.c  verifier.c.backup  verifier_http.c
tests/inputs/ra/: test_no_ak_cert.sh  test_no_gv_db.sh  test_no_tls_cert.sh  test_no_tpa_db.sh
tests/inputs/tpa/: test_no_tls_cert.sh
tpm2-tools/lib/: tpm2.c
tpm2-tools/tools/: tpm2_quote.c
tpm_ca_certs/: 01.pem  Infineon-Certificate-OptigaEccMfrCA041-C-v01_00-EN.pem  Infineon-Certificate-OptigaRsaMfrCA041-C-v01_00-EN.pem  swtpm-localca-rootca-cert.pem
